Update title in QC Viewer to reflect correct tool name

--- a/quality_control_tools/Data_Quality_Control_Review_Tool.html
+++ b/quality_control_tools/Data_Quality_Control_Review_Tool.html
@@ -154,7 +154,7 @@
                 <div className="flex flex-col items-center justify-center h-screen bg-gray-50">
                     <div className="text-center p-12 bg-white rounded-xl shadow-lg border border-gray-200">
                         <UploadCloudIcon className="mx-auto h-16 w-16 text-blue-500" />
-                        <h1 className="mt-4 text-2xl font-bold text-gray-800">ADAM Quality Control Viewer</h1>
+                        <h1 className="mt-4 text-2xl font-bold text-gray-800">ADAM QC Review Tool</h1>
                         <p className="mt-2 text-md text-gray-600">Select a folder containing your JSON documents to begin.</p>
                         <button
                             onClick={() => fileInputRef.current.click()}
